--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Snake</title>
   <link rel="stylesheet" href="main.css"> 
-  <script src="/js/main.js" defer type="module"></script>
+  <script src="js/main.js" defer type="module"></script>
 </head>
 <body>
 
